--- a/css/master.css
+++ b/css/master.css
@@ -13,7 +13,7 @@ header {
   margin: auto;
   height: 30em;
   width: 70em;
-  background-color: rgba(68, 34, 0, .5);
+  background-color: rgba(4, 32, 66, .2);
   border-bottom-right-radius: 10em;
   border-bottom-left-radius: 10em;
 }
@@ -37,4 +37,14 @@ header {
   height: 18.75em;
   width: 18.75em;
   margin: auto;
+}
+
+#pic1, #pic2, #pic3 {
+  margin-top: 2em;
+  flex-shrink: 2;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 5em;
+  border: .1em solid rgba(4, 32, 66, .2);
+  /*box-shadow: 0px 0px 10em 40px #DBA632;*/
 }
