--- a/css/master.css
+++ b/css/master.css
@@ -46,5 +46,9 @@ header {
   max-height: 100%;
   border-radius: 5em;
   border: .1em solid rgba(4, 32, 66, .2);
+}
+
+.pic:hover {
+  background-color: rgba(4, 32, 66, .2);
   /*box-shadow: 0px 0px 10em 40px #DBA632;*/
 }
