--- a/css/master.css
+++ b/css/master.css
@@ -48,7 +48,10 @@ header {
   border: .1em solid rgba(4, 32, 66, .2);
 }
 
-.pic:hover {
-  background-color: rgba(4, 32, 66, .2);
-  /*box-shadow: 0px 0px 10em 40px #DBA632;*/
+img:hover {
+  box-shadow: 0px 0px 10em .5em rgba(4, 32, 66, .2);
+}
+
+img:active{
+  box-shadow: 0px 0px 10em 40px #DBA632;
 }
