--- a/css/master.css
+++ b/css/master.css
@@ -42,8 +42,8 @@ header {
 #pic1, #pic2, #pic3 {
   margin-top: 2em;
   flex-shrink: 2;
-  max-width: 100%;
-  max-height: 100%;
+  height: 18.75em;
+  width: 18.75em;
   border-radius: 5em;
   border: .1em solid rgba(4, 32, 66, .2);
 }
